crates/core/tests/ui/typed_query/fail/update_from.stderr
error: this SQL construct is outside the typed_sql v1 subset: typed_sql v1 does not support UPDATE ... FROM
          |
        1 | UPDATE users SET name = $name FROM audit_users WHERE users.id = $id
          | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  --> tests/ui/typed_query/fail/update_from.rs:15:9
   |
15 |         UPDATE users SET name = $name FROM audit_users WHERE users.id = $id
   |         ^^^^^^
